--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "bugs": {
     "url": "https://github.com/verdant-yucca/express-mesto-gha/issues"
   },
+  "devDependencies": {
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.16"
+  },
   "homepage": "https://github.com/verdant-yucca/express-mesto-gha#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
