ПР13: правки после ревью

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/verdant-yucca/express-mesto-gha.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Roman Davydenko Deadshot323rd@yandex.ru",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/verdant-yucca/express-mesto-gha/issues"
