--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
   },
   "homepage": "https://github.com/verdant-yucca/express-mesto-gha#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "mongoose": "^6.7.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.0",
+    "validator": "^13.7.0"
   }
 }
