--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "express-mesto-gha",
+  "name": "backend-mesto-express",
   "version": "1.0.0",
-  "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "lint": "npx eslint .",
@@ -10,13 +9,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/verdant-yucca/express-mesto-gha.git"
+    "url": "git+https://github.com/verdant-yucca/react-mesto-api-full/backend.git"
   },
   "keywords": [],
   "author": "Roman Davydenko Deadshot323rd@yandex.ru",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/verdant-yucca/express-mesto-gha/issues"
+    "url": "https://github.com/verdant-yucca/react-mesto-api-full/issues"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
@@ -24,15 +23,18 @@
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.16"
   },
-  "homepage": "https://github.com/verdant-yucca/express-mesto-gha#readme",
+  "homepage": "https://github.com/verdant-yucca/react-mesto-api-full#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.7.2"
   }
 }
